# pannes-historiques

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .rgignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTES.md  PLANS.md  README.md  SECURITY.md  biome.json  future.md  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  request_open_data_team_fr.md  research.md  roadmap-history.md  server.py  wrangler.jsonc
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: browser.yml  codeql.yml  quality.yml
app/: __init__.py  addressing.py  config.py  db.py  disclosures.py  durable_runtime.py  geocoding.py  hydro.py  i18n.py  perf.py  services.py  sheet_views.py  views.py  web.py
app/static/: app.css  app.js  detail-panels.js  disclosure_geometries.json  icons.js  manifest.webmanifest  map-events.js  map-layers.js  map-utils.js  offline.html  outage-map.js  regional_metric_geometries.json  search.js  service-worker.js  sheet.js  side-panel.js  ui-format.js
app/templates/: _default_context_list.html  _domain_archive.html  _domain_context.html  _domain_current.html  _sheet.html  (+13 more)
data/: README.md
docs/: api-posture.md  architecture.md  code-map.md  contributing.md  contributor-issues.md  cost-containment.md  current-snapshot.md  maintenance-backlog.md  operations.md  r-quebec-beta-draft.md  user-stories.md
migrations/: 0001_durable_feed.sql  0002_nearby_indexes.sql  0003_history_nearby_index.sql  0004_disclosure_mirror.sql  0005_disclosure_attempts.sql  0006_disclosure_parse_phases.sql  0007_hydro_polygon_geometries.sql  0008_runtime_state.sql  0009_municipal_archive_bins.sql  0010_municipal_archive_summary.sql
scripts/: build_region_geometry_asset.py  check_module_boundaries.py  check_production_perf.py  start.sh
src/: archive-summary.js  container-proxy.js  container.js  durable-read-handlers.js  ingestion-health.js  municipal-archive.js  runtime-policy.js  worker-routing.js  worker.js
tests/: conftest.py  container-proxy.test.js  detail-close-handling.test.js  durable-read-handlers.test.js  e2e_fixture_app.py  e2e_server.py  ingestion-health.test.js  live-ui-audit.test.js  maintenance-importer.test.js  map-events.test.js  map-utils.test.js  municipal-archive.test.js  runtime-policy.test.js  side-panel-archive.test.js  test_addressing.py  test_disclosures.py  test_durable_runtime.py  test_geocoding.py  test_hydro.py  test_module_boundaries.py  test_server.py  test_service_interface.py  test_services.py  test_sheet_views.py  test_views.py  test_web.py  test_web_utils.py  worker-archive-summary.test.js  worker-routing.test.js
(+19 files in other folders)
