[project]
name = "pannes-historiques"
version = "0.4.5"
description = "Map-first Hydro-Quebec outage history prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1.0",
  "gunicorn>=26.0.0",
  "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
  "djlint>=1.41.0",
  "geopandas>=1.1.4",
  "pre-commit>=4.6.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.djlint]
profile = "jinja"
extension = "html"
indent = 2
max_line_length = 120
ignore = "H006,H030,H031"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 61.9
precision = 1

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*", "static/vendor/maplibre/*", "templates/*.html"]
